[1875019] Added logging. If you want to chanege logging level, edit src/main/resources/log4j.properties and set log4j.rootLogger=DEBUG, stdout to something else, e.g replce DEBUG with WARN, to only see warnings. Also, discovered that output file name of the burstsimulator.exe can be set in control file, currently setting it in java without any dynamics, as we dont need to run multiple processes at once (thus having unique input output filenames).

--- a/src/main/resources/templates/burstcontrol.vm
+++ b/src/main/resources/templates/burstcontrol.vm
@@ -80,7 +80,7 @@
 5 #min: Duration of a time interval in the output table, 58
 1 #min: Unit of time in the output table, 59:unit
 0 #: Delimiter in the signature file 0) gap 1) tab 2) comma, 60
-ht_burst : The name for the output files. NB: without extension, no gaps! 61
+$output_filename : The name for the output files. NB: without extension, no gaps! 61
 === RANKS OF VARIABLES AND SUBTABLES (RANK 0 = SKIP VARIABLE) ===
 0 #: Free air positive nucleation rate, 62:J+a
 0 #: Free air negative nucleation rate, 63:J-a
